--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/nathanhackley/grunt-boilerplate/issues"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "grunt": "~0.4.2",
     "grunt-contrib-sass": "~0.5.0",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-contrib-watch": "~0.5.3",
@@ -22,6 +22,7 @@
     "grunt-contrib-connect": "~0.5.0",
     "connect-livereload": "~0.3.0",
     "matchdep": "~0.1.2",
-    "grunt-contrib-uglify": "~0.2.4"
+    "grunt-contrib-uglify": "~0.2.4",
+    "grunt-contrib-cssmin": "~0.7.0"
   }
 }
